syntax = "proto3";

package holms.types.crm.groups;
option csharp_namespace = "HOLMS.Types.CRM.Groups";
option go_package = "crm/groups";

import "primitive/uuid.proto";

message GroupIndicator {
	holms.types.primitive.Uuid id = 1;
}
